--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -1,4 +1,8 @@
 {
+    "Application": {
+        "title": "Arwen",
+        "description": "Gestão Inteligente de Inventário"
+    },
     "Home": {
         "title": "Arwen",
         "description": "Gestão Inteligente de Inventário"
