feat: added  translations.

--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -5,7 +5,15 @@
     },
     "Home": {
         "title": "Arwen",
-        "description": "Intelligent Inventory Management"
+        "description": "Intelligent Inventory Management",
+        "history": "History",
+        "search": "Search in",
+        "advancedSearch": "Advanced Search",
+        "searchModalTitle": "Advanced Search",
+        "searchModalCancelLabel": "Cancel",
+        "searchModalLabel": "Search",
+        "historyModalTitle": "History",
+        "historyModalCancelLabel": "Close"
     },
     "System": {
         "Sidebar": {
