feat: added sidebar collapse translations.

--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -3,6 +3,10 @@
         "title": "Arwen",
         "description": "Intelligent Inventory Management"
     },
+    "Sidebar": {
+        "expand": "Expand",
+        "collapse": "Collapse"
+    },
     "Home": {
         "title": "Arwen",
         "description": "Intelligent Inventory Management",
