--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -17,12 +17,14 @@
         "searchModalCancelLabel": "Cancelar",
         "searchModalLabel": "Pesquisar",
         "historyModalTitle": "Histórico",
+        "organizations": "Minhas Organizações",
         "user": "Usuário",
         "settings": "Configurações",
         "notifications": "Notificações",
         "refer&earn": "Indique e Ganhe",
         "create": "Novo",
         "apps": "Apps",
+        "organizationsModalTitle": "Minhas Organizações",
         "appsModalTitle": "Todos os Apps",
         "notificationsModalTitle": "Notificações",
         "referAndEarnModalTitle": "Indique e Ganhe",
