feat: added translations.

--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -9,28 +9,31 @@
     },
     "Home": {
         "title": "Arwen",
-        "description": "Intelligent Inventory Management",
-        "history": "History",
-        "search": "Search in",
-        "advancedSearch": "Advanced Search",
-        "searchModalTitle": "Advanced Search",
-        "searchModalCancelLabel": "Cancel",
-        "searchModalLabel": "Search",
-        "historyModalTitle": "History",
-        "organizations": "My Organizations",
-        "user": "User",
-        "settings": "Settings",
-        "notifications": "Notifications",
-        "refer&earn": "Refer and Earn",
-        "create": "Create",
-        "apps": "Apps",
-        "organizationsModalTitle": "My Organizations",
-        "appsModalTitle": "All Apps",
-        "notificationsModalTitle": "Notifications",
-        "referAndEarnModalTitle": "Refer And Earn",
-        "createModalTitle": "Quick Create"
+        "description": "Intelligent Inventory Management"
     },
     "System": {
+        "Navbar": {
+            "history": "History",
+            "search": "Search in",
+            "advancedSearch": "Advanced Search",
+            "searchModalTitle": "Advanced Search",
+            "searchModalCancelLabel": "Cancel",
+            "searchModalLabel": "Search",
+            "historyModalTitle": "History",
+            "organizations": "My Organizations",
+            "user": "User",
+            "settings": "Settings",
+            "notifications": "Notifications",
+            "refer&earn": "Refer and Earn",
+            "create": "Create",
+            "apps": "Apps",
+            "organizationsModalTitle": "My Organizations",
+            "appsModalTitle": "All Apps",
+            "notificationsModalTitle": "Notifications",
+            "referAndEarnModalTitle": "Refer And Earn",
+            "createModalTitle": "Quick Create",
+            "mobileNav": "Navigation Menu"
+        },
         "Sidebar": {
             "Home": {
                 "title": "Home",
