--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -9,28 +9,31 @@
     },
     "Home": {
         "title": "Arwen",
-        "description": "Gestão Inteligente de Inventário",
-        "history": "Histórico",
-        "search": "Pesquisar em",
-        "advancedSearch": "Pesquisa Avançada",
-        "searchModalTitle": "Pesquisa Avançada",
-        "searchModalCancelLabel": "Cancelar",
-        "searchModalLabel": "Pesquisar",
-        "historyModalTitle": "Histórico",
-        "organizations": "Minhas Organizações",
-        "user": "Usuário",
-        "settings": "Configurações",
-        "notifications": "Notificações",
-        "refer&earn": "Indique e Ganhe",
-        "create": "Novo",
-        "apps": "Apps",
-        "organizationsModalTitle": "Minhas Organizações",
-        "appsModalTitle": "Todos os Apps",
-        "notificationsModalTitle": "Notificações",
-        "referAndEarnModalTitle": "Indique e Ganhe",
-        "createModalTitle": "Criar Novo"
+        "description": "Gestão Inteligente de Inventário"
     },
     "System": {
+        "Navbar": {
+            "history": "Histórico",
+            "search": "Pesquisar em",
+            "advancedSearch": "Pesquisa Avançada",
+            "searchModalTitle": "Pesquisa Avançada",
+            "searchModalCancelLabel": "Cancelar",
+            "searchModalLabel": "Pesquisar",
+            "historyModalTitle": "Histórico",
+            "organizations": "Minhas Organizações",
+            "user": "Usuário",
+            "settings": "Configurações",
+            "notifications": "Notificações",
+            "refer&earn": "Indique e Ganhe",
+            "create": "Novo",
+            "apps": "Apps",
+            "organizationsModalTitle": "Minhas Organizações",
+            "appsModalTitle": "Todos os Apps",
+            "notificationsModalTitle": "Notificações",
+            "referAndEarnModalTitle": "Indique e Ganhe",
+            "createModalTitle": "Criar Novo",
+            "mobileNav": "Menu de Navegação"
+        },
         "Sidebar": {
             "Home": {
                 "title": "Início",
