feat: added href value to sidebar home.

--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -38,6 +38,7 @@
             "Home": {
                 "title": "Início",
                 "path": "/system/home",
+                "href": "/system/home/overview",
                 "hasNested": false,
                 "nested": null
             },
