--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -38,6 +38,7 @@
             "Home": {
                 "title": "Home",
                 "path": "/system/home",
+                "href": "/system/home/overview",
                 "hasNested": false,
                 "nested": null
             },
