feat: added translation.

--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -159,7 +159,8 @@
             }
         },
         "Home Description": {
-            "pre-title": "Hello"
+            "pre-title": "Hello",
+            "homeMobileNav": "Home Page Options"
         },
         "Home": {
             "Overview": {
