--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -20,14 +20,13 @@
             "searchModalCancelLabel": "Cancel",
             "searchModalLabel": "Search",
             "historyModalTitle": "History",
-            "organizations": "My Organizations",
+            "organization": "My Organization",
             "user": "User",
             "settings": "Settings",
             "notifications": "Notifications",
             "refer&earn": "Refer and Earn",
             "create": "Create",
             "apps": "Apps",
-            "organizationsModalTitle": "My Organizations",
             "appsModalTitle": "All Apps",
             "notificationsModalTitle": "Notifications",
             "referAndEarnModalTitle": "Refer And Earn",
